// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature/> renders the <Feature/> with just the subtitle 1`] = `
<div
  class="feature__Container-sc-15ocszq-0 jmXdSU"
>
  <h2
    class="feature__SubTitle-sc-15ocszq-2 uayJI"
  >
    Watch anywhere. Cancel anytime.
  </h2>
</div>
`;

exports[`<Feature/> renders the <Feature/> with just the title 1`] = `
<div
  class="feature__Container-sc-15ocszq-0 jmXdSU"
>
  <h1
    class="feature__Title-sc-15ocszq-1 dxftIf"
  >
    Unlimited movies, TV shows, and more.
  </h1>
</div>
`;

exports[`<Feature/> renders the <Feature/> with populated data 1`] = `
<div
  class="feature__Container-sc-15ocszq-0 jmXdSU"
>
  <h1
    class="feature__Title-sc-15ocszq-1 dxftIf"
  >
    Unlimited movies, TV shows, and more.
  </h1>
  <h2
    class="feature__SubTitle-sc-15ocszq-2 uayJI"
  >
    Watch anywhere. Cancel anytime.
  </h2>
</div>
`;
